--- a/src/style/Footer.module.scss
+++ b/src/style/Footer.module.scss
@@ -17,3 +17,11 @@ footer{
 .footerLight{
     background-color: aquamarine;
 }
+
+.buttonStyle {
+    margin-bottom: 0.5rem;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+
+}
